# Repo1

./: .gitignore  struktur.txt
1_frontend/: .firebaserc  firebase.json  package-lock.json  package.json  tailwind.config.js
1_frontend/.firebase/: hosting.YnVpbGQ.cache  hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
1_frontend/public/: index.html
1_frontend/src/: App.css  App.jsx  LeadForm.jsx  index.css  main.jsx
1_frontend/src/components/: AddLeadPopup.jsx  AppShell.jsx  EditLeadPopup.jsx  LeadDetailPopup.jsx  LeadDetailsEditor.jsx  LeadDocuments.jsx  LeadEditor.jsx  LeadForm.jsx  LoginForm.jsx  RegisterForm.jsx  Sidebar.jsx  statusOptions.js
1_frontend/src/firebase/: firebase-config.js
1_frontend/src/utils/: api.js
2_backend/: app.py  auth.py  crm_core.py  leads.json  leads_storage.py  pyproject.toml  scraper.py
2_backend/uploads/lead_084da389-702b-4cee-b94a-64a701556e5d/: Michael  Ogris.docx  Märchen Reloaded.docx
2_backend/uploads/lead_d960d94f-a5b4-4056-bb35-4286715a189c/: 2025-04-13 Email_xy
2_backend/uploads/lead_e6a4568b-9062-4bfc-80ba-d0d5f17d1e1a/: Stahlbau_Maier_GmbH.vcf
2_backend/uploads/lead_e6a4568b-9062-4bfc-80ba-d0d5f17d1e1a/.trash/: Märchen 2.0.docx
4_docs/1_technische Notizen.md/: 0_project_log.md  Log_LeadNova_03.04.2025.md  Log_LeadNova_06_04_2025.md  Log_LeadNova_2025-04-05.md
5_Readme/: README_LeadNova.md  README_LeadNova_03.04.2025.md
