[project]
name = "leadnova-backend"
version = "0.1.0"
description = "Backend for LeadNova CRM System"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "proprietary"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
